--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 h1 {
     color: lightsteelblue;
     background-color: teal;
-    margin: auto;
-    padding: 5px;
+    margin-top: 20px;
+    padding: 10px;
     text-align: center;
+    font-size: 40px;
 }
 
 h2 {
     color: lightsteelblue;
     background-color: teal;
-    margin: auto;
-    padding:5px;
+    margin: 5% ;
+    padding:10px;
     text-align: center;
+    font-size: 30px;
 }
 
 div {
@@ -23,14 +25,26 @@ div {
 
 
 textarea {
-    border-color: black;
-    border-width: 2px;
+    border-color: teal;
+    background-color: lightsteelblue;
+    border-width: 3px;
+    width: 80%;
+    height: 20%;
     text-align: center;
+    line-height: 30px;
+    font-size: 25px;
+    border-radius: 5px;
+    outline: none;
+    margin-bottom: 10px;
 }
 
 button {
     width: 160px;
     line-height: 30px;
     text-align: center;
-    
+    font-size: 25px;
+    border-radius: 5px;
+    color: lightsteelblue;
+    background-color: teal;
+    margin: 10px;
 }
